*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-cvs-watch.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-cvs-watch.htm
@@ -28,8 +28,9 @@
 <p class="Para">Normally with CVS clients, an explicit <em>edit</em> would need 
   to be issued by the user. With Team CVS support however, an <em>edit</em> is 
   automatically issued by the client when you start to modify a file. In addition, 
-  Team CVS provides you with a list of people editing a file, which can be helpful 
-  to find out who is working on a file before you start to edit it.</p>
+  when <em>editing</em> a file, Team CVS provides you with the list of people 
+  already editing a file. This allows you to find out who is working on a file 
+  before you start to edit it.</p>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts"
  width="159" height="27">
  <br>
