--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-110.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-110.htm
@@ -14,14 +14,14 @@
 <p><em>Prerequisite:</em>Before you can discover the branch and version tags for 
   a repository, you must have a valid repository location in the CVS Repositories 
   view. </p>
-<P>To discover existing branch and version tags for multiple folders in a single 
-  repository location:</p>
+<P>To discover existing branch tags for multiple folders in a single repository 
+  location:</p>
 <ol>
   <li>Switch to the CVS Repository Exploring perspective or add the CVS Repositories 
     view to the current perspective.</li>
   <li>In the CVS Repositories view, select a repository location.</li>
-  <li>From the pop-up menu for the CVS Repositories view, select <b>Refresh Branches 
-    and Versions</b>. The Refresh Branches and Versions dialog will open.</li>
+  <li>From the pop-up menu for the CVS Repositories view, select <b>Refresh Branches</b>. 
+    The Refresh Branches dialog will open.</li>
   <li>In the folder list, select the folders whose tags you would like to refresh. 
     Alternatively, at the bottom of the dialog, you can choose a working set and 
     all remote folders whose names match the name of a project in the working 
