--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-watch.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-watch.htm
@@ -49,11 +49,7 @@
   CVS automatically issues an edit as soon as you start to modify a file. This 
   support is built deep into Eclipse, so typing in a text editor, performing Java 
   refactoring, etc., will all issue a CVS edit for you. You can also perform an 
-  explit edit via the <strong>Team &gt; Edit</strong> context menu on a resource. 
-  If your preferred work style is to always explicitly issue CVS edits, you can 
-  turn off the automatic issuing of edits via the preference &quot;Edit the file 
-  without informing the server&quot; on the <strong>Team &gt; CVS &gt; Watch/Edit</strong> 
-  preferences page.</p>
+  explit edit via the <strong>Team &gt; Edit</strong> context menu on a resource.</p>
 <p>When an edit is issued, everyone who is watching that file will be notified 
   by the CVS server. In addition, if someone is already editing that file, you 
   will be informed immediately that you are not the only editor. You can see the 
