26469: [DOC] Team and flexible project structure

--- a/bundles/org.eclipse.platform.doc.isv/guide/team_howto.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_howto.htm
@@ -140,6 +140,13 @@ how you achieve integration.&nbsp; So where to start?</P>
         </ul>
       </td>
     </tr>
+    <tr> 
+      <td width="32%">Enable the use of linked resources</td>
+      <td width="68%"><ul>
+          <li>See <a href="team_resources_linked.htm"><b>Team 
+            and linked resources</b></a></li>
+        </ul></td>
+    </tr>
   </table>
   <h3>Streamlining repository-related tasks</h3>
   <table border="1" cellpadding="0" cellspacing="0" width="73%">
