--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
@@ -92,7 +92,7 @@
         page and locate the release that you are working with.
       </li>
       <li>
-        Download the Example Plug-ins zip file appropriate for your platform.
+        Scroll down to the <em>Example Plug-ins</em> section and follow the install instructions.
       </li>
       <li>
         If the workbench is running, shut it down. Plug-ins should not be installed while the workbench is running.
