--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07d.htm
@@ -24,10 +24,10 @@ the third alternative, the New button.</P>
 <img align="texttop" border="0" src="../images/Image16_new_pulldown.jpg" alt="New Wizard Pulldown" width="171" height="137"></P>
   </li>
   <li>
-<P CLASS="Para">
-In the New File wizard, your folder's name and path already&nbsp; appear by default in the
-<i> Enter or select the folder </i> field. This is because you chose to create the new file while this folder was selected in the Navigator
-view and the view was active.</P>
+    <P CLASS="Para"> In the New File wizard, your folder's name and path already&nbsp; 
+      appear by default in the <i> Enter or select the parent folder </i> field. 
+      This is because you chose to create the new file while this folder was selected 
+      in the Navigator view and the view was active.</P>
   </li>
   <li>
 <P CLASS="Para">
@@ -102,12 +102,12 @@ closely you can also see a second, inactive editor tab, &quot;Welcome&quot;.&nbs
 </P>
 
 
-<P>Click on the Welcome editor tab. Now select the file JanesINIFile.ini in the Navigator view. Lastly,
-click on the editor tab for JanesFile.txt. Notice how the Navigator updated
-itself to select the file you are currently editing (JanesFile.txt). If you
-don't like this automatic update you can easily turn it off using Window &gt;
-Preferences &gt; Workbench &gt; Link Navigator selection to active editor.
-</P>
+<P>Click on the Welcome editor tab. Now select the file JanesINIFile.ini in the 
+  Navigator view. Then select the Link to Editor button on the Navigator view. 
+  Lastly, click on the editor tab for JanesFile.txt. Notice how the Navigator 
+  updated itself to select the file you are currently editing (JanesFile.txt). 
+  If you don't like this automatic update you can easily turn it off by deselecting 
+  the Link to Editor button.</P>
 
 
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
