--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12c.htm
@@ -20,8 +20,8 @@ Select the Navigator view. Its title bar will be highlighted (according to your
 operating system's color scheme).</P>
   </li>
   <li>
-<P CLASS="Para">
-Choose Go To &gt; Resource... from the popup.</P>
+    <P CLASS="Para"> Choose Go To &gt; Resource... from the Navigate menu in the 
+      toolbar.</P>
   </li>
   <li>
 <P CLASS="Para">In the Goto Resource dialog type&nbsp; &quot;JanesF&quot; into
