--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24c.htm
@@ -18,8 +18,7 @@ You can use the export wizard to export from the Workbench to the file system.</
 Select the project JaneQUser in the Navigator. </P>
   </li>
   <li>
-<P CLASS="Para">
-From the menubar, select File &gt; Export.</P>
+    <P CLASS="Para"> From the popup, select File &gt; Export.</P>
   </li>
   <li>
 <P CLASS="Para">
@@ -42,8 +41,8 @@ only file checked for export.</p>
 <img align="texttop" border="0" src="../images/Image43_export_tree.jpg" alt="Export Wizard" width="559" height="578" ></p>
   </li>
   <li>
-<P CLASS="Para">
-In the <i> Directory</i> field, type or browse to select a location in the file system where you want the exported resources to reside.</P>
+    <P CLASS="Para"> In the <i> To directory</i> field, type or browse to select 
+      a location in the file system where you want the exported resources to reside.</P>
 <P CLASS="Para">
 If you enter the name of a directory that does not exist the export wizard will
 offer to create it for you once you press Finish.</P>
