--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31c.htm
@@ -18,8 +18,7 @@ You can use the Import wizard to copy resources into the Workbench.</P>
 Select the project JaneQuser.</p>
   </li>
   <li>
-<P CLASS="Para">
-Select File &gt; Import.</P>
+    <P CLASS="Para"> Select Import from the popup.</P>
   </li>
   <li>
 <P CLASS="Para">
@@ -42,14 +41,13 @@ field's combo box.</P>
 <P CLASS="Para"> Checking a folder in the left pane will import its entire contents into
 the Workbench. A grayed checkbox (as shown below) indicates that only some of the
 files in the folder will be imported into the Workbench.</P>
-<P CLASS="Para">You can use the Select Types... button to filter the types of
-files you want to import.</P>
+    <P CLASS="Para">You can use the Filter Types... button to filter the types 
+      of files you want to import.</P>
 <P CLASS="Para"><img align="texttop" border="0" src="../images/Image39_import_tree.jpg" alt="Import Wizard" width="529" height="594"></P>
   </li>
   <li>
-<P CLASS="Para">
-The <i>Where do you want the imported resources to go</i> field should already
-be filled in with the name of the project (JaneQUser).&nbsp; </P>
+    <P CLASS="Para"> The <i>Into folder</i> field should already be filled in 
+      with the name of the project (JaneQUser).&nbsp; </P>
   </li>
   <li>
 <P CLASS="Para">You can change the destination project or folder by clicking
