--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-32.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-32.htm
@@ -46,7 +46,9 @@ You can:</P>
     contents in the file system</p>
   </li>
 </ul>
-<p CLASS="Para">Just accept the default (do not delete contents) and press Yes.</p>
+    <p CLASS="Para">Just accept the default (do not delete contents) and press 
+      Yes. Note that this is only an option for projects. Files and folders are 
+      always deleted from the file system when deleted.</p>
   </li>
 </ol>
 <P> The same steps
