--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34c.htm
@@ -10,8 +10,9 @@
 <BODY BGCOLOR="#ffffff">
 <h3>
 Embedded editors</h3>
-<P CLASS="Para">
-<img align="texttop" border="0" src="../images/win_only.gif" alt="Windows only" width="49" height="13">&nbsp;The Workbench supports OLE document editors.</P>
+<P CLASS="Para"> <img align="texttop" border="0" src="../images/win_only.gif" alt="Windows only" width="49" height="13">&nbsp;The 
+  Workbench supports OLE document editors.</P>
+<P CLASS="Para"><img src="../images/Image619_ole.gif" width="465" height="250"></P>
 <ol>
   <li>
 <P CLASS="Para">
@@ -19,9 +20,9 @@ Select JanesFolder in the navigator.&nbsp;</P>
   </li>
   <li>Create the file JanesWordDoc.doc. </li>
   <li>
-<P CLASS="Para">Notice how the Workbench automatically opens the OLE document
-editor in place and integrates its pull-down menu options into the menubar.
-There should also be an editor tab for JanesWordDoc.doc.&nbsp;</P>
+    <P CLASS="Para">Notice how the Workbench automatically opens the OLE document 
+      editor in place and integrates its pull-down menu options into the menu 
+      bar. There should also be an editor tab for JanesWordDoc.doc.&nbsp;</P>
   </li>
   <li>
 <P CLASS="Para">
