--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36a.htm
@@ -15,7 +15,10 @@
 <ol>
 	<li>In the Workbench toolbar, click the Search button <img align="texttop" border="0" src="../images/Image50_search.jpg" alt="Search button" width="20" height="19" >.</li>
 	<li>In the Search Expression field, type in: <i>it.</i>
-		<br>The combo box for the <i>Search Expression</i> field also lets you select from a list of recently performed searches.<br><img align="texttop" border="0" src="../images/Image51_search_it.jpg" alt="Search dialog" width="488" height="378" ></li>
+		<br>
+    The combo box for the<em> Containing Text</em> field also lets you select 
+    from a list of recently performed searches.<br>
+    <img align="texttop" border="0" src="../images/Image51_search_it.jpg" alt="Search dialog" width="488" height="378" ></li>
 	<li>You can select or deselect the <i> Case sensitive</i> check box depending on whether or not you want to perform a case sensitive or insensitive search.
 		<br>We want to search for lowercase &quot;<i>it&quot;</i> so check the <i>Case sensitive </i>box.</li>
 	<li>In the <i>File name patterns</i> field you can specify the kinds of files to include in your search.
