--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2f.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2f.htm
@@ -14,8 +14,7 @@ files</h3>
 The Tasks view provides two approaches for opening the file associated with a
 task:</P>
 <ul>
-  <li>
-    Select the task, and from the context menu choose Go To File</li>
+  <li> Select the task, and from the context menu choose Go To</li>
   <li>
     Double click on the task</li>
 </ul>
