--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39e.htm
@@ -47,10 +47,10 @@ accommodate the editors and views as necessary.</P>
 It is important to observe the color of an editor tab (in the figure below there
 are two groups, one above the other)
 <p CLASS="Para"><b>blue</b> - indicates that the editor is currently active</p>
-<p CLASS="Para"><b>white</b> - indicates that the editor was the last
-active editor. If there is an active view, it will be the editor that the active view is currently working with.
-This is important when working with views like the Outline and Properties that
-work closely with the editor.</li>
+    <p CLASS="Para"><b>default </b>(gray on Windows XP) - indicates that the editor 
+      was the last active editor. If there is an active view, it will be the editor 
+      that the active view is currently working with. This is important when working 
+      with views like the Outline and Properties that work closely with the editor.</li>
   <li>
 <P CLASS="Para">
 Drag and dock the editor somewhere else in the editor area, noting the behavior that results from docking on each kind of drop cursor. Continue to experiment with docking and resizing editors and views until you have arranged the Workbench to your satisfaction.
