--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02d.htm
@@ -22,10 +22,10 @@ will be prompted to save your editor's changes.</P>
 </P>
 
 
-<p class="Para">When an editor is active the Workbench menubar and toolbar contain
-operations applicable to the editor. When a view becomes active, the editor
-operations are disabled. However, in some cases, certain editor may be
-appropriate in the context of a view and will remain enabled.</p>
+<p class="Para">When an editor is active the Workbench menu bar and toolbar contain 
+  operations applicable to the editor. When a view becomes active, the editor 
+  operations are disabled. However, in some cases, certain editor may be appropriate 
+  in the context of a view and will remain enabled.</p>
 
 
 <P CLASS="Para">
@@ -39,20 +39,22 @@ later in this tutorial.</P>
 </P>
 
 
-<P>If you open a resource that does not have an associated editor,
-the Workbench will attempt to launch an external editor registered with your platform.&nbsp;
-These external editors are not tightly integrated with the Workbench and are not
-embedded into the Workbench's editor area.&nbsp;
-</P>
-
-
-<P><img align="texttop" border="0" src="../images/win_only.gif" alt="Windows only" width="49" height="13">  On
-Windows the Workbench will also attempt to launch the editor in-place as an OLE
-document editor. For example editing a DOC file will cause Microsoft Word to be
-opened in-place within the Workbench if you have Microsoft Word installed on
-your machine. If you have not installed Microsoft Word, Wordpad will open
-instead.
-</P>
+<P>If you open a resource that does not have an associated editor, the Workbench 
+  will attempt to launch an external editor registered with your platform.&nbsp; 
+  These external editors are not tightly integrated with the Workbench and are 
+  not embedded into the Workbench's editor area.&nbsp; </P>
+<P>You can also cycle through the editors using the back and forward arrow buttons 
+  in the toolbar and by using the Ctrl+F6 accelerator. The arrow buttons move 
+  through the last mouse selection points and allow you to potentially move through 
+  several points in a file before moving to another one. Ctrl+F6 pops up a list 
+  of currently selected editors with editor used before the current one selected 
+  by default.</P>
+<P><img align="texttop" border="0" src="../images/win_only.gif" alt="Windows only" width="49" height="13"> 
+  On Windows the Workbench will also attempt to launch the editor in-place as 
+  an OLE document editor. For example editing a DOC file will cause Microsoft 
+  Word to be opened in-place within the Workbench if you have Microsoft Word installed 
+  on your machine. If you have not installed Microsoft Word, Word Pad will open 
+  instead. </P>
 
 
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
