--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07c.htm
@@ -13,31 +13,31 @@
 Now that we have our project we will create a folder. We will create
 our folder using the Navigator view's popup menu.</P>
 <ol>
-  <li>
-<P CLASS="Para">
-Activate the Navigator view and select the project JaneQUser (the first project we
-created in the Navigator view). From
-the view's popup menu choose New &gt; Folder.</P>
+  <li> 
+    <P CLASS="Para"> Activate the Navigator view and select the project JaneQUser 
+      (the first project we created in the Navigator view). From the view's popup 
+      menu choose New &gt; Folder.</P>
   </li>
-  <li>
-<P CLASS="Para">
-In the New Folder wizard, your project name appears by default in the <i>Enter or select the folder
-</i>
-field. This is because we chose to create the new folder from your project's context menu.</P>
+  <li> 
+    <P CLASS="Para"> In the New Folder wizard, your project name appears by default 
+      in the <i>Enter or select the parent folder </i> field. This is because 
+      we chose to create the new folder from your project's context menu.</P>
   </li>
-  <li>
-<P CLASS="Para">
-In the <i> Folder name</i> field, type a unique name for your new folder (e.g., using your first and last names in the title). Do not use spaces or special characters in the folder name (e.g., &quot;JanesFolder&quot;).</P>
-<P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image14_new_folder_wizard.jpg" alt="New Folder Wizard" width="438" height="584"></P>
+  <li> 
+    <P CLASS="Para"> In the <i> Folder name</i> field, type a unique name for 
+      your new folder (e.g., using your first and last names in the title). Do 
+      not use spaces or special characters in the folder name (e.g., &quot;JanesFolder&quot;).</P>
+    <P CLASS="Para"> <img align="texttop" border="0" src="../images/Image14_new_folder_wizard.jpg" alt="New Folder Wizard" width="438" height="584"></P>
   </li>
-  <li>
-<P CLASS="Para">
-Click Finish when you are done. The Navigator view will update to show your
-newly created folder.</P>
+  <li> 
+    <P CLASS="Para"> Click Finish when you are done. The Navigator view will update 
+      to show your newly created folder.</P>
   </li>
 </ol>
-<P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+<P>Note that there is now also an Advanced button. This button when selected allows 
+  you to enter a location outside of a projects hierarchy as the location for 
+  one of its folders. This is called a linked folder.</P>
+<P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a> 
 </P>
 
 
