--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2d2.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2d2.htm
@@ -14,67 +14,64 @@ Associated Tasks</h3>
 Associated tasks are associated with a specific location in a resource. To
 associate a task with our&nbsp;JanesFile.txt:</P>
 <ol>
-  <li>
-<P CLASS="Para">
-Open a text file (JanesFile.txt) by double clicking on it in the Navigator view.</P>
+  <li> 
+    <P CLASS="Para"> Open a text file (JanesFile.txt) by double clicking on it 
+      in the Navigator view.</P>
   </li>
-  <li>
-<P CLASS="Para">
-In the editor area directly to the left of any line in the text editor, access the context menu from the marker bar.
-The marker bar is the vertical bar to the left of the main text area.</P>
+  <li> 
+    <P CLASS="Para"> In the editor area directly to the left of any line in the 
+      text editor, access the context menu from the marker bar. The marker bar 
+      is the vertical bar to the left of the main text area.</P>
   </li>
-  <li>
-<P CLASS="Para">
-From the marker bar's context menu, select Add Task.</P>
-<P CLASS="Para">
-The marker bar displays any marker including bookmarks, task markers (for associated tasks), and/or debugging breakpoints. You can associate various markers with specific lines in a file by accessing the context menu from the marker bar directly to the left of that line.</P>
-<P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image53_marker1.jpg" alt="Marker bar menu" width="420" height="200"></P>
+  <li> 
+    <P CLASS="Para"> From the marker bar's context menu, select Add Task.</P>
+    <P CLASS="Para"> The marker bar displays any marker including bookmarks, task 
+      markers (for associated tasks), and/or debugging breakpoints. You can associate 
+      various markers with specific lines in a file by accessing the context menu 
+      from the marker bar directly to the left of that line.</P>
+    <P CLASS="Para"> <img align="texttop" border="0" src="../images/Image53_marker1.jpg" alt="Marker bar menu" width="420" height="200"></P>
   </li>
-  <li>
-<P CLASS="Para">
-In the Enter Task Description field, type a brief description for the task you want to associate with that line in the text file.</P>
-<blockquote>
-<P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image53_add_task_dlg.jpg" alt="Add Task dialog" width="609" height="248"></P>
-</blockquote>
+  <li> 
+    <P CLASS="Para"> In the Enter Task Description field, type a brief description 
+      for the task you want to associate with that line in the text file.</P>
+    <blockquote> 
+      <P CLASS="Para"> <img align="texttop" border="0" src="../images/Image53_add_task_dlg.jpg" alt="Add Task dialog" width="609" height="248"></P>
+    </blockquote>
   </li>
-  <li>
-<P CLASS="Para">
-Click OK when you are done.</P>
+  <li> 
+    <P CLASS="Para"> Click OK when you are done.</P>
   </li>
-  <li>
-<P CLASS="Para">
-Notice that a new task marker appears in the marker bar, directly to the left of the line where you added the task. Also, notice that the new task appears in the Tasks
-view.</P>
-<P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image53_task_updated.jpg" alt="Tasks view" width="489" height="390"></P>
+  <li> 
+    <P CLASS="Para"> Notice that a new task marker appears in the marker bar, 
+      directly to the left of the line where you added the task. Also, notice 
+      that the new task appears in the Tasks view.</P>
+    <P CLASS="Para"> <img align="texttop" border="0" src="../images/Image53_task_updated.jpg" alt="Tasks view" width="489" height="390"></P>
   </li>
-  <li>
-<P CLASS="Para">
-After you have added the new task, click in the editor on the first line or any
-other line above the line with which the new task is associated.</P>
+  <li> 
+    <P CLASS="Para"> After you have added the new task, click in the editor on 
+      the first line or any other line above the line with which the new task 
+      is associated.</P>
   </li>
-  <li>
-<P CLASS="Para">
-Add several lines of text to the file at this point.</P>
+  <li> 
+    <P CLASS="Para"> Add several lines of text to the file at this point.</P>
   </li>
-  <li>
-<P CLASS="Para">
-Notice that as you add lines of text above it, the task marker moves down in the marker bar in order to remain with the associated line in the file.
-The line number in the Tasks view is updated when the file is saved.&nbsp;</P>
+  <li> 
+    <P CLASS="Para"> Notice that as you add lines of text above it, the task marker 
+      moves down in the marker bar in order to remain with the associated line 
+      in the file. The line number in the Tasks view is updated when the file 
+      is saved.&nbsp;</P>
   </li>
-  <li>
-<P CLASS="Para">
-In the marker bar, access the context menu from the task you just created.</P>
+  <li> 
+    <P CLASS="Para"> In the marker bar, access the context menu from the task 
+      you just created.</P>
   </li>
-  <li>
-<P CLASS="Para">
-From the marker's context menu, select Remove Task.</P>
+  <li> 
+    <P CLASS="Para"> From the marker's context menu, select Mark Completed. </P>
   </li>
-  <li>
-<P CLASS="Para">
-Notice that the task marker disappears from the marker bar and the task is removed from the Tasks view.</P>
+  <li>Now select Delete Completed Tasks from the marker's context menu.</li>
+  <li> 
+    <P CLASS="Para"> Notice that the task marker disappears from the marker bar 
+      and the task is removed from the Tasks view.</P>
   </li>
 </ol>
 
