Updated for new look

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40a.htm
@@ -17,9 +17,7 @@ how to use the view once it is a fast view.&nbsp;</p>
 <ul>
   <li>
     Using drag and drop</li>
-  <li>
-    Using a&nbsp; menu operation available from the view icon
-    menu.</li>
+  <li> Using a&nbsp; menu operation available from the view System menu.</li>
 </ul>
 <p CLASS="Head">Let's start by creating a fast view using drag and drop.</p>
 <ol>
