--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52d.htm
@@ -22,24 +22,18 @@ click on the editor tab to maximize the editor.&nbsp;</p>
 Looking at the numbered changes let's work our way down the left side of the
 difference editor.</p>
 <ul>
-  <li>
-    Starting with the top line (in the left pane) we can see
-    that the difference bar
-    (in the area of the blue circle) indicates something is missing from
-    the very top of the left file. If we follow the difference band (see #1) to
-    the right file we can see that the it contains &quot;This is line 1&quot; .</li>
-  <li>
-    The next line &quot;This is line 2.&quot; is white
-    indicating it matches the right file.</li>
-  <li>
-    Moving onto the next line (colored in gray) we can see that
-    the left file and right file have different contents for this line (see #2).</li>
-  <li>
-    The next line (This is line 4) is once again in white, so we
-    can skip it.</li>
-  <li>
-    The next line exists in the left file&nbsp; but since it is
-    gray we follow its difference bar to the right (see #3) and notice that the
+  <li> Starting with the top line (in the left pane) we can see that the difference 
+    bar (in the area of the blue circle) indicates something is missing from the 
+    very top of the left file. If we follow the difference band (see #1) to the 
+    right file we can see that the it contains &quot;This is line 1&quot; .</li>
+  <li> The next line &quot;This is line 2.&quot; is white indicating it matches 
+    the right file.</li>
+  <li> Moving onto the next line (colored in the background color) we can see 
+    that the left file and right file have different contents for this line (see 
+    #2).</li>
+  <li> The next line (This is line 4) is once again in white, so we can skip it.</li>
+  <li> The next line exists in the left file&nbsp; but since it is in the background 
+    color we follow its difference bar to the right (see #3) and notice that the 
     right file does not contain the line (see red circle).</li>
 </ul>
 <p CLASS="Head">Initially the compare editor might seem a bit daunting but if
