Updated marker doc.

--- a/bundles/org.eclipse.platform.doc.isv/guide/resAdv_markers.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/resAdv_markers.htm
@@ -162,7 +162,9 @@ descendants). </P>
 <H4>
 Marker persistence</H4>
 <P >
-The platform standard markers (task, problem, and bookmark) are <b>persistent</b>. This means that their state will be saved across workbench shutdown and startup.</P>
+The platform standard markers (task, problem, and bookmark) are <b>persistent</b>. This means that their state will be saved across workbench shutdown and startup.
+However, markers of a persistent type may be selectively made transient by setting the reserved attribute <strong>transient</strong> to true.
+</P>
 <P >
 New marker types declared by plug-ins are not persistent unless they are declared as such.</P>
 
@@ -194,6 +196,7 @@ extension point. The standard marker types for problems, tasks and bookmarks are
       &lt;attribute name=&quot;priority&quot;/&gt;
       &lt;attribute name=&quot;message&quot;/&gt;
       &lt;attribute name=&quot;done&quot;/&gt;
+      &lt;attribute name=&quot;userEditable&quot;/&gt;      
    &lt;/extension&gt;
    &lt;extension
       id=&quot;bookmark&quot; 
