--- a/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
@@ -45,7 +45,7 @@ size throughout.]</p>
     <td width="30%" valign="top" align="right"><b>Editor navigation history</b></td>
     <td width="70%" valign="top" align="left">Workbench editors now keep a
       navigation history. If you open a second editor while you're editing away,
-      you can use <b>Navigate &gt; Backward</b> to get back, or press the back
+      you can use <b>Navigate &gt; Back</b> to get back, or press the back
       button on the workbench toolbar. The back button on your mouse also does
       the trick as along as it sends the standard ALT+LeftArrow key sequence.
       <p align="center"><img border="0" src="images/navigate-back.gif" width="396" height="176"></p>
@@ -78,14 +78,14 @@ size throughout.]</p>
       action provides a uniform way to navigate from an open editor to a view
       showing the corresponding file (e.g., in the resource Navigator view), or
       from a file selected in one view to the same file in a different view
-      (e.g., from the resource Navigator view to the Java Packages Explorer
+      (e.g., from the resource Navigator view to the Java Package Explorer
       view).
       <p align="center"><img border="0" src="images/show-in.gif" width="466" height="238"></p>
     </td>
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><b>Improved Ant view</b></td>
-    <td width="70%" valign="top" align="left">There is a new Ant View (<b>Window
+    <td width="70%" valign="top" align="left">There is a new Ant view (<b>Window
       &gt; Show View &gt; Ant</b>) that makes it easier to run Ant scripts. The
       Ant view has been completely redesigned and streamlined to simplify
       running a single Ant target. The view also includes a search button for
@@ -118,7 +118,5 @@ size throughout.]</p>
       cannot readily be copied into an Eclipse workspace.
   </tr>
 </table>
-
 </body>
-
 </html>
