Add PR #s for SWT Mac known problems

--- a/maps/org.eclipse.releng/readmes/readme_eclipse.html
+++ b/maps/org.eclipse.releng/readmes/readme_eclipse.html
@@ -12,7 +12,7 @@
 
 <h1>Eclipse Project Release Notes</h1>
 <p><b>DRAFT </b>Pre-release 2.1.0<br>
-Last revised March 12, 2003</p>
+Last revised March 19, 2003</p>
 <p align="left"><strong>This software is OSI Certified Open Source Software.<br>
 OSI Certified is a certification mark of the Open Source Initiative.&nbsp;</strong></p>
 <blockquote>
@@ -810,7 +810,8 @@ toolbar:</font></p>
 <h3>3.1.5 <a name="I-Platform - SWT">Platform - SWT</a></h3>
 <h4>Printing and drag and drop not available on Mac (Mac OS X Carbon only)</h4>
 <p>The Mac OS X Carbon implementation of SWT does not yet support printing or
-drag and drop. (bug MISSING)</p>
+drag and drop. (bugs <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=33637">33637</a>,
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=30104">30104</a>)</p>
 <h4>Unable to drag data between applications in simplified Chinese locale (Motif
 only)</h4>
 <p>When configured for the simplified Chinese locale, it is not possible to drag
@@ -1491,7 +1492,7 @@ issues with the Eclipse SDK.</p>
     Path</b>&nbsp; preference page.</li>
   <li>Source attachment root path.&nbsp; There is a UI for setting the source
     root path for a JAR in 2.0 (e.g. &quot;src/&quot;).&nbsp; This value is
-    inferred in 2.1, and not recorded in the project's <code>.classpath</code> 
+    inferred in 2.1, and not recorded in the project's <code>.classpath</code>
     file.&nbsp; Therefore, a 2.0 workspace (possibly) not find the attached
     source. Recommendation: Use 2.0 to specify the source attachment root
     path.&nbsp; There is additional source attachment flexibility provided in
