Use "/" in commands and preferences rather than ">"

--- a/maps/org.eclipse.releng/readmes/readme_eclipse.html
+++ b/maps/org.eclipse.releng/readmes/readme_eclipse.html
@@ -1471,7 +1471,7 @@ issues with the Eclipse SDK.</p>
   <li>Linked folders and files. This support was added in 2.1. Information about
     linked resources is recorded in the project's <code>.project</code> file.
     Recommendation: do not use. Better still, disable linked resources via the <b>Workbench
-    / Linked Resources</b> preference page.</li>
+    &gt; Linked Resources</b> preference page.</li>
   <li>External tool (Ant) builders. Information about external tool builder is
     recorded in the project's <code>.project</code> file. The format of the
     information changed between 2.0 and 2.1. Builders created or changed in 2.1
@@ -1483,13 +1483,13 @@ issues with the Eclipse SDK.</p>
     path. This support was added in 2.1. This information is recorded in the
     project's <code>.classpath</code> file. Recommendation: do not specify
     exclusion patterns.&nbsp; Better still, disable exclusion patterns via the<b>
-    Java / Compiler / Build Path</b>&nbsp; preference page.</li>
+    Java &gt; Compiler &gt; Build Path</b>&nbsp; preference page.</li>
   <li>Output folders associated with Java source entries on the build class
     path. This support was added in 2.1. This information is recorded in the
     project's <code>.classpath</code> file. Recommendation: do not specify
     anything other than the default (project-wide) output folder.&nbsp; Better
-    still, disable multiple output locations via the<b> Java / Compiler / Build
-    Path</b>&nbsp; preference page.</li>
+    still, disable multiple output locations via the<b> Java &gt; Compiler &gt;
+    Build Path</b>&nbsp; preference page.</li>
   <li>Source attachment root path.&nbsp; There is a UI for setting the source
     root path for a JAR in 2.0 (e.g. &quot;src/&quot;).&nbsp; This value is
     inferred in 2.1, and not recorded in the project's <code>.classpath</code>
@@ -1506,13 +1506,13 @@ issues with the Eclipse SDK.</p>
     used, then a 2.0 workspace will have unresolved classpath entries and
     therefore most Java capabilities (including compilation, search, run, debug)
     will not produce the expected results. Recommendation: Ensure that the
-    setting on the <b>Plug-in Development / Java Build Path Control </b>preference
+    setting on the <b>Plug-in Development &gt; Java Build Path Control </b>preference
     page for using classpath containers is disabled before creating any plug-in
     (or fragment) projects.&nbsp;</li>
 </ol>
 <h4>Using Eclipse 2.1 to develop plug-ins that work in Eclipse 2.0</h4>
 <p>It is also possible (and reasonable) to use Eclipse 2.1 to develop a plug-in
-intended to work in Eclipse 2.0. Use the <b>Plug-in Development / Target
+intended to work in Eclipse 2.0. Use the <b>Plug-in Development &gt; Target
 Platform </b>preference page to locate non-workspace plug-ins in an 2.0 Eclipse
 install. This ensures that the code for your plug-in is being compiled and
 tested against Eclipse 2.0 APIs, extension points, and plug-ins. (The above list
