Revert capitalization for Java Development Tooling (not a proper noun)

--- a/bundles/org.eclipse.platform.doc.isv/guide/arch_struct.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/arch_struct.htm
@@ -134,7 +134,7 @@ level documentation configurations.</P>
 <H3>
 Java Development Tooling (JDT)</H3>
 <P >
-The Java Development Tooling (JDT) plug-ins extend the platform workbench by
+The Java development tooling (JDT) plug-ins extend the platform workbench by
 providing specialized features for editing, viewing, compiling, debugging, and
 running Java code.</P>
 <P >The JDT is installed as a set of plug-ins that are included in the SDK.&nbsp;
