Updated to 2.1 font features

--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/fontsandcolors.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/fontsandcolors.htm
@@ -17,30 +17,31 @@ systems do not provide enough colors to handle all of the extra information that
 color and fonts provide in Eclipse.&nbsp;</p>
 <h2>Fonts</h2>
 <p><img border="0" src="../../images/accessibility_new_project.gif" alt="New Project Wizard" width="500" height="498" ></p>
-<p>There are 3 main fonts in use by the Eclipse platform. They are:
-</p>
+<p>There are 4 main fonts in use by the Eclipse platform. They are: </p>
 
 <dl>
   <dt><em>Banner Font</em></dt>
-  <dd>Used in PDE editors, welcome pages and in the title area of
-    many wizards. For instance the New Project wizard uses this font for the top
-    title,</dd>
+  <dd>Used in PDE editors, welcome pages and in the title area of many wizards. 
+    For instance the New Project wizard uses this font for the top title,</dd>
   <dt><em>Header Font</em></dt>
-  <dd>Used as a section heading. For instance the
-    Welcome page for the Eclipse Platform uses this font for the top title,</dd>
+  <dd>Used as a section heading. For instance the Welcome page for the Eclipse 
+    Platform uses this font for the top title,</dd>
   <dt><em>Text Font</em></dt>
   <dd>Used in text editors.</dd>
+  <dt><em>Dialog Font</em></dt>
+  <dd>Used in dialogs.</dd>
 </dl>
-
-<p>These fonts can be set via the <b>Workbench &gt; Font</b> preference. As well as
-these 3 fonts there are several other secondary font settings. These default to
-the text font. They can be found on the following preference pages:</p>
+<p>&nbsp; </p>
+<p>These fonts can be set via the <b>Workbench &gt; Font</b> preference. As well 
+  as these 4 fonts there are several other secondary font settings. These default 
+  to the text font. They can be found on the font preference page:</p>
 <ul>
-  <li><b>Workbench &gt; Compare &gt; Text</b></li>
-  <li><b>Debug &gt; Console</b></li>
-  <li><b>External Tools</b></li>
-  <li><b>Java &gt; Editor &gt; Appearance</b></li>
-  <li><b>Team &gt; CVS &gt; Console</b></li>
+  <li><b>Compare Text Font</b></li>
+  <li><b>CVS Console Font</b></li>
+  <li><b>Debug Console Font</b></li>
+  <li><b>Detail Pane Text Font</b></li>
+  <li><b>Java Compare Text Font</b></li>
+  <li><b>Java Editor Text Font</b></li>
 </ul>
 <h2>Colors</h2>
 <p>Eclipse uses colors as an information enhancement in many places. Whenever
@@ -53,7 +54,7 @@ these colors can be adjusted via the following preference pages:</p>
   <li><b>Workbench &gt; Search</b> (Foreground for inexact matches)</li>
   <li><b>Debug &gt; Console</b> (Standard Out, Standard Error, Standard In)</li>
   <li><b>Debug &gt; Variable Views</b> (Changed variable)</li>
-  <li><b>External Tools</b> (Error, Warning, Information, Verbose, Debug)</li>
+  <li><b>Ant</b> (Error, Warning, Information, Verbose, Debug)</li>
   <li><b>Install/Update</b> (Section Title Color)</li>
   <li><b>Java &gt; Editor &gt; Appearance</b> (Line number, matching brackets, current
     line, problems, print, find scope, linked position)</li>
